[project]
name = "incident-tracker-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
start = "docker compose up -d"
start-dev = "task start-storages && task start-app-dev"
start-app-dev = "uvicorn --reload src.main:app --host 0.0.0.0 --port 8000"
start-app-prod = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
start-storages = "docker compose up -d postgres"
stop = "docker compose down"

logs-storages = "docker compose logs -f postgres"
logs-app = "docker compose logs -f app"
logs-migrate = "docker compose logs -f migrate"

migrate-to-head = "alembic upgrade head"
migrate-to = "alembic upgrade"
migrate-downgrade-to = "alembic downgrade"
migrate-revision = "alembic revision --autogenerate -m"
migrate-check-current = "alembic current"
migrate-check-history = "alembic history"

lint = "ruff check src tests"
lint-fix = "ruff check src tests --fix"
test = "pytest tests"
test-coverage = "pytest --cov=src tests && coverage html"

list = "task --list"
